# satellite_trails

./: .gitignore  LICENSE  README.md  pyproject.toml  segmentation.py  temp.py
.github/workflows/: tests.yml
data/: copy_test_pngs.sh  master_split.csv
data/h5s/: master_split.csv
docs/source/: colab.rst  conf.py  csd3.rst  data.rst  evaluation.rst  full_field_pipeline.rst  index.rst  limitations.rst  parameter_search.rst  postprocessing.rst  quickstart.rst  reproduction.rst  results.rst  training.rst
results/optuna/: optuna_study-29213819.out  optuna_study-29263384.out  summary.csv
results/slurm/: analyze_optuna-29260760.out
scripts/: inference.py
scripts/colab/: classifier_train_colab.ipynb  evaluate_models_colab.ipynb  final_full_field_evaluation_colab.ipynb  git_clone.ipynb  pipeline_timing_colab.ipynb  plot_all_pipelines_colab.ipynb  save_validation_predictions_colab.ipynb  tune_postprocessing_colab.ipynb  unet_train_colab.ipynb
scripts/python/: benchmark_model_speed.py  evaluate_final_full_field.py  evaluate_models.py  evaluation.py  inference.py  tune_postprocessing.py  unet_evaluation.py
scripts/slurm/: analyze_optuna.slurm  benchmark_a100_batches.slurm  benchmark_a100_bs64.slurm  benchmark_a100_workers.slurm  data_summary.slurm  eval.slurm  evaluation.slurm  preprocess_dataset.slurm  submit_optuna.slurm  train.slurm
tests/: conftest.py
tests/classifier_model/: conftest.py  test_classifier.py  test_train.py
tests/data/: conftest.py  test_augmentation.py  test_dataset.py  test_preprocessing.py  test_sampler.py
tests/evaluation/: test_classifier_evaluate.py  test_final_full_field_eval.py  test_unet_evaluate.py
tests/ml_utils/: test_checkpoints.py  test_loss_functions.py  test_metrics.py  test_seed_scheduler.py
tests/model/: conftest.py  test_evaluate.py  test_losses.py  test_train.py  test_unet.py
tests/postprocess/: test_adaptive_hough.py  test_contour.py  test_hough.py  test_pipeline.py
tests/postprocess_archive/: test_contour.py  test_hough.py  test_pipeline.py
tests/unet_model/: conftest.py  (+5 more)
(+172 files in other folders)
