[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite_trail_segmentation"
version = "0.1.0"
description = "Machine learning pipeline for segmentation of satellite trails"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.4.1",
    "h5py>=3.9",
    "Pillow",
    "numpy",
    "opencv-python-headless",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "jupyterlab",
    "optuna",
]

[tool.setuptools.packages.find]
where = ["src"]
