[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite_trail_segmentation"
version = "0.1.0"
description = "Machine learning pipeline for segmentation of satellite trails"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.4.1",
    "h5py>=3.9",
    "Pillow",
    "numpy",
    "opencv-python-headless",
    "scikit-learn",
    "scikit-image>=0.21.0",
    "torchvision",
    "torchmetrics",
    "matplotlib",
    "optuna",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "pandas",
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["satellite_trail_segmentation"]
omit = ["tests/*"]
